<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="nano">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="SpotifyApp">SPOTIFY STREAMER</string>
    <string name="ScoresApp">SCORES APP</string>
    <string name="LibraryApp">LIBRARY APP</string>
    <string name="BIBApp">BUILD IT BIGGER</string>
    <string name="XYZApp">XYZ READER</string>
    <string name="CapstoneApp">CAPSTONE: MY OWN APP</string>
</resources>
